Overriding the dropdown style to prevent part of menu from being hidden when overflowing the containing element.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -26,6 +26,13 @@ html, body, div, p {
   white-space: nowrap;
 }
 
+.ui.dropdown .menu {
+  // Setting max-height and overflow
+  // to prevent part of menu from being hidden when overflowing the containing element
+  max-height: 300px; 
+  overflow: scroll;
+}
+
 .dropdown.icon {
   float: right;
 }
